bluec-tests/tests/invalid/types_float/bitwise_shift_float.c
int main(void) {
    /* It's illegal to apply the << or >> operator to floats */
    float f = 5.0f << 3;
    return 0;
}